// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapToClaimDtoArray should map the gql data only including fields on the picklist 1`] = `
[
  {
    "id": "a0526000009Mc2aAAC",
    "paidDate": null,
  },
  {
    "id": "a0526000009Mc1OAAS",
    "paidDate": null,
  },
  {
    "id": "a0526000009Mc2RAAS",
    "paidDate": null,
  },
  {
    "id": "a0526000009Mc2QAAS",
    "paidDate": null,
  },
  {
    "id": "id-1",
    "paidDate": null,
  },
  {
    "id": "id-3-defaults",
    "paidDate": null,
  },
  {
    "id": "id-4",
    "paidDate": null,
  },
]
`;

exports[`mapToClaimDtoArray should map the gql data to the correct Dtos filtering out for not New and not Claim Detail records 1`] = `
[
  {
    "id": "a0526000009Mc2aAAC",
    "isApproved": false,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 12,
  },
  {
    "id": "a0526000009Mc1OAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 1,
  },
  {
    "id": "a0526000009Mc2RAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 3,
  },
  {
    "id": "a0526000009Mc2QAAS",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 2,
  },
  {
    "id": "id-1",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 3,
  },
  {
    "id": "id-3-defaults",
    "isApproved": false,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 0,
  },
  {
    "id": "id-4",
    "isApproved": true,
    "isFinalClaim": false,
    "paidDate": null,
    "periodId": 1,
  },
]
`;

exports[`mapToClaimDtoArray should map with additional data if statusLabel or forecastCost needed 1`] = `
[
  {
    "approvedDate": null,
    "forecastCost": 400,
    "id": "a0526000009Mc2aAAC",
    "impactManagementParticipation": "Unknown",
    "isApproved": false,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-24T14:53:35.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl72EAC",
    "periodEndDate": 2024-04-30T00:00:00.000Z,
    "periodId": 12,
    "periodStartDate": 2024-04-01T00:00:00.000Z,
    "status": "Innovate Queried",
    "statusLabel": "Queried by Innovate UK",
    "totalCost": 498000,
  },
  {
    "approvedDate": 2023-05-16T23:00:00.000Z,
    "forecastCost": 10000,
    "id": "a0526000009Mc1OAAS",
    "impactManagementParticipation": "Unknown",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-17T15:38:39.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl71EAC",
    "periodEndDate": 2023-05-31T00:00:00.000Z,
    "periodId": 1,
    "periodStartDate": 2023-05-01T00:00:00.000Z,
    "status": "Approved",
    "statusLabel": "Payment being processed",
    "totalCost": 0,
  },
  {
    "approvedDate": 2023-05-15T23:00:00.000Z,
    "forecastCost": 300,
    "id": "a0526000009Mc2RAAS",
    "impactManagementParticipation": "Unknown",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-16T15:24:19.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl72EAC",
    "periodEndDate": 2023-07-31T00:00:00.000Z,
    "periodId": 3,
    "periodStartDate": 2023-07-01T00:00:00.000Z,
    "status": "Approved",
    "statusLabel": "Payment being processed",
    "totalCost": 500000,
  },
  {
    "approvedDate": 2023-05-15T23:00:00.000Z,
    "forecastCost": 200,
    "id": "a0526000009Mc2QAAS",
    "impactManagementParticipation": "Yes",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-16T15:22:00.000Z,
    "paidDate": null,
    "partnerId": "a0D2600000zXl72EAC",
    "periodEndDate": 2023-06-30T00:00:00.000Z,
    "periodId": 2,
    "periodStartDate": 2023-06-01T00:00:00.000Z,
    "status": "Approved",
    "statusLabel": "Payment being processed",
    "totalCost": 1000,
  },
  {
    "approvedDate": 2023-05-15T23:00:00.000Z,
    "forecastCost": 0,
    "id": "id-1",
    "impactManagementParticipation": "Yes",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": 2023-05-16T15:14:50.000Z,
    "paidDate": null,
    "partnerId": "",
    "periodEndDate": Date { NaN },
    "periodId": 3,
    "periodStartDate": Date { NaN },
    "status": "Payment Requested",
    "statusLabel": "unknown",
    "totalCost": 0,
  },
  {
    "approvedDate": null,
    "forecastCost": 0,
    "id": "id-3-defaults",
    "impactManagementParticipation": "Unknown",
    "isApproved": false,
    "isFinalClaim": false,
    "lastModifiedDate": Date { NaN },
    "paidDate": null,
    "partnerId": "",
    "periodEndDate": Date { NaN },
    "periodId": 0,
    "periodStartDate": Date { NaN },
    "status": "",
    "statusLabel": "unknown",
    "totalCost": 0,
  },
  {
    "approvedDate": null,
    "forecastCost": 100,
    "id": "id-4",
    "impactManagementParticipation": "No",
    "isApproved": true,
    "isFinalClaim": false,
    "lastModifiedDate": Date { NaN },
    "paidDate": null,
    "partnerId": "a0D2600000zXl72EAC",
    "periodEndDate": 2023-05-31T00:00:00.000Z,
    "periodId": 1,
    "periodStartDate": 2023-05-01T00:00:00.000Z,
    "status": "Approved",
    "statusLabel": "Payment being processed",
    "totalCost": 70,
  },
]
`;
